--- a/C vs Python.ipynb
+++ b/C vs Python.ipynb
@@ -733,85 +733,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94f84346-0357-4512-976d-4fc427c2f439",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
-   },
-   "source": [
-    "## Structs\n",
-    "\n",
-    "### C\n",
-    "```c\n",
-    "#include <stdio.h>\n",
-    "\n",
-    "struct Shape {\n",
-    "    float d;\n",
-    "};\n",
-    "\n",
-    "int main(){\n",
-    "    struct Shape min_variabel1 = {10.0};\n",
-    "    return 0; \n",
-    "}\n",
-    "```\n",
-    "\n",
-    "### Python uses Classes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "83b703c3-cb3b-47e4-9bf8-5472751f021a",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 1]\n",
-      "Printing area...\n",
-      "Calculating area...\n",
-      "Area of a Circle radius=10.0cm: 314.0cm^2\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "class MyCircle:\n",
-    "    def __init__(self, r, unit=\"cm\"):\n",
-    "        self.r = r\n",
-    "        self.unit = unit\n",
-    "\n",
-    "    # Method to calculate and print area of circle\n",
-    "    def calculate_area(self):\n",
-    "        print(\"Calculating area...\")\n",
-    "        radius= self.r\n",
-    "        area = (radius)**2 * 3.14\n",
-    "        return area\n",
-    "\n",
-    "    def print_area(self):\n",
-    "        print(\"Printing area...\")\n",
-    "        radius = self.r\n",
-    "        area = self.calculate_area()\n",
-    "        print(f\"Area of a Circle {radius=}{self.unit}: {area}{self.unit}^2\")\n",
-    "\n",
-    "circle = MyCircle(10.0)\n",
-    "\n",
-    "circle.print_area()\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "09f468d1-d4d3-4eee-894d-136c0300e11d",
    "metadata": {
     "editable": true,
@@ -1268,9 +1189,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "AnvendtPython",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
