--- a/C vs Python.ipynb
+++ b/C vs Python.ipynb
@@ -1189,9 +1189,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AnvendtPython",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
