--- a/C vs Python.ipynb
+++ b/C vs Python.ipynb
@@ -32,13 +32,35 @@
     "    - windows: `winget install -e --id Anaconda.Miniconda3`\n",
     "    - MacOS: `brew install --cask miniconda`\n",
     "2. `conda install --name base anaconda-navigator`\n",
-    "3. `conda create --name  <Name_of_python_env> <package1> <package2> <package3>`,\n",
+    "    - You can create any environment using : `conda create --name  <Name_of_python_env> <package1> <package2> <package3>`,\n",
     "    - ie. `conda create --name  testenv numpy`\n",
     "    - By default we have an environment called `base` that has alot of packages already\n",
     "5. Open `Anaconda Navigator`\n",
     "    - Everything you can do in the commandline, you can do using `Anaconda Navigator`\n",
-    "6. **Always** Open VS Code from `Anaconda Navigator`\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8f32cab",
+   "metadata": {},
+   "source": [
+    "# Hvorfor bruger jeg Jupyter Notebook?\n",
+    "\n",
+    "- **Alt samlet ét sted:**  \n",
+    "  Jupyter Notebook gør det muligt at vise tekst, kode og resultater i samme dokument. Det giver et bedre overblik og gør det lettere at følge med i undervisningen.\n",
+    "\n",
+    "- **Interaktivitet:**  \n",
+    "  Jeg kan hurtigt demonstrere kode, lave ændringer og vise resultater med det samme – direkte i undervisningen.\n",
+    "\n",
+    "- **Let at eksperimentere:**  \n",
+    "  I kan selv afprøve kode, ændre på eksempler og se hvad der sker – uden at skulle skifte mellem flere programmer.\n",
+    "\n",
+    "- **Bedre læring:**  \n",
+    "  Slides i Jupyter gør det nemt at kombinere teori og praksis, så I kan se hvordan koncepter omsættes til kode.\n",
+    "\n",
+    "> **Bemærk:**  \n",
+    "> I løser selv opgaverne i almindelige `.py`-filer, men undervisningen og eksempler præsenteres i Jupyter for at give jer det bedste udgangspunkt."
    ]
   },
   {
@@ -379,9 +401,10 @@
     "You now know how to:\n",
     "* Create a new python instance\n",
     "* How to activate a python environment\n",
+    "* How to install packages in an environment\n",
     "\n",
     "\n",
-    "Install the following Packages using your prefered method in an environment called `AnvendtPython`.\n",
+    "Install the following Packages using your prefered method in an environment called `py314`.\n",
     "- `numpy pandas matplotlib scikit-learn pyside6 faker`\n"
    ]
   },
@@ -919,6 +942,28 @@
     "    main()\n",
     "\n",
     "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "454fce49",
+   "metadata": {},
+   "source": [
+    "# Development Plan\n",
+    "\n",
+    "En **Development Plan** er en metode til at skrive programmer.  \n",
+    "Den proces vi har brugt i dette kapitel kaldes \"indkapsling og generalisering\".  \n",
+    "Trinene i denne proces er:\n",
+    "\n",
+    "1. Start med at skrive et lille program uden funktionsdefinitioner.\n",
+    "2. Når programmet virker, så find en sammenhængende del af koden, indkapslér den i en funktion og giv den et navn.\n",
+    "3. Generalisér funktionen ved at tilføje passende parametre.\n",
+    "4. Gentag trin 1 til 3, indtil du har et sæt velfungerende funktioner.\n",
+    "5. Kig efter muligheder for at forbedre programmet ved at refaktorere.  \n",
+    "   For eksempel: Hvis du har lignende kode flere steder, så overvej at samle det i en mere generel funktion.\n",
+    "\n",
+    "Denne metode har nogle ulemper – men den er nyttig, hvis du ikke på forhånd ved, hvordan programmet skal opdeles i funktioner.  \n",
+    "Denne tilgang gør det muligt at designe undervejs (Iterativ udvikling)."
    ]
   },
   {
