--- a/C vs Python.ipynb
+++ b/C vs Python.ipynb
@@ -12,7 +12,14 @@
     "tags": []
    },
    "source": [
-    "# OOP 1: Hello C and Python\n"
+    "# OOP 1: Hello C and Python\n",
+    "\n",
+    "## Course: Anvendt Programmering for Biomedical Engineering Students\n",
+    "\n",
+    "## Primary Focus:\n",
+    "Fundamental concepts of programming using C and Python, covering installation, basic syntax, and environment setup.\n",
+    "\n",
+    "## Instructor: Martin Siemienski Andersen"
    ]
   },
   {
