--- a/oop1_C vs Python.ipynb
+++ b/oop1_C vs Python.ipynb
@@ -48,6 +48,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a98a525b",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "\n",
+    "# Literatur Oversigt\n",
+    "Jeg elsker personligt gratis literatur.  *Specielt når det er lovligt.*\n",
+    "\n",
+    "## Hjemmesider\n",
+    "- https://www.tutorialspoint.com/python/index.htm\n",
+    "- https://numpy.org/doc/stable/reference/index.html\n",
+    "- https://matplotlib.org/stable/\n",
+    "- https://scikit-learn.org/stable/\n",
+    "\n",
+    "## Bøger\n",
+    "- [Think Python (eBook/PDF)](https://allendowney.github.io/ThinkPython/)\n",
+    "- [Python for Everybody (eBook/PDF)](https://do1.dr-chuck.com/pythonlearn/EN_us/pythonlearn.pdf)\n",
+    "- [Data Wrangling with Python (eBook/PDF)](https://datawranglingpy.gagolewski.com/datawranglingpy.pdf)\n",
+    "\n",
+    "## Python selv\n",
+    "Ja nogle gange skal man ikke gøre ting mere komplicerede end nødvendigt:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2405f362",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "help(plt.plot)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e3d3ad85-6ad1-4a62-bd1f-625a61cf0097",
    "metadata": {
     "editable": true,
