--- a/oop1_C vs Python.ipynb
+++ b/oop1_C vs Python.ipynb
@@ -99,12 +99,12 @@
     "- [Think Python (eBook/PDF)](https://allendowney.github.io/ThinkPython/)\n",
     "- [Python for Everybody (eBook/PDF)](https://do1.dr-chuck.com/pythonlearn/EN_us/pythonlearn.pdf)\n",
     "- [Data Wrangling with Python (eBook/PDF)](https://datawranglingpy.gagolewski.com/datawranglingpy.pdf)\n",
-    "\n",
     "## Hjemmesider\n",
     "- https://www.tutorialspoint.com/python/index.htm\n",
     "- https://numpy.org/doc/stable/reference/index.html\n",
     "- https://matplotlib.org/stable/\n",
-    "- https://scikit-learn.org/stable/"
+    "- https://scikit-learn.org/stable/\n",
+    "- https://docs.conda.io/projects/conda/en/stable/user-guide/index.html"
    ]
   },
   {
@@ -138,7 +138,7 @@
    "source": [
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "#help(plt.plot)\n"
+    "help(plt.plot)\n"
    ]
   },
   {
@@ -339,6 +339,7 @@
    "id": "11a857e0-1fc3-46f1-aea9-037640945906",
    "metadata": {
     "editable": true,
+    "jp-MarkdownHeadingCollapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -564,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "571abab2-f26e-4932-851b-0f95e1b6ee49",
    "metadata": {
     "editable": true,
@@ -622,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "fa33d69e-b4a9-4882-8667-291bbf35723f",
    "metadata": {
     "editable": true,
@@ -636,32 +637,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'tim': 13, 'Anders': 10}\n",
-      "dict item: d['tim']=13\n",
+      "dict item: 13\n",
       "[1, 200, 3]\n",
       "[1, 3, 901]\n",
-      "[3, 901]\n"
+      "[3, 901]\n",
+      "1\n"
      ]
     }
    ],
    "source": [
-    "# Arrays in python (tuples, lists, dicts)\n",
-    "''' c '''\n",
-    "\"\"\" d \"\"\"\n",
+    "# Arrays in python (tuples, dicts, lists)\n",
     "A_t = (1,2,3)\n",
     "d = {\"tim\":13, \"Anders\":10}\n",
     "## Print them\n",
-    "\n",
-    "print(d)\n",
-    "print(f\"dict item: {d['tim']=}\")\n",
-    "\n",
+    "print(f\"dict item: {d['tim']}\")\n",
     "B_l = [1,200,3]\n",
     "print(B_l)\n",
     "B_l.remove(200)\n",
-    "B_l.append(901)\n",
+    "B_l.append(901) \n",
     "print(B_l)\n",
-    "B_l.pop(0)\n",
-    "print(B_l)\n"
+    "a = B_l.pop(0)\n",
+    "print(B_l)\n",
+    "print(a)\n"
    ]
   },
   {
@@ -769,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "cdebcb6d-834d-4062-bb34-602c79768fd5",
    "metadata": {
     "editable": true,
@@ -820,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "9965b176-5997-4785-931a-08dff833e94e",
    "metadata": {
     "editable": true,
@@ -835,17 +832,17 @@
      "output_type": "stream",
      "text": [
       "For Loop:\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
+      "  Hest\n",
+      "  Ko\n",
+      "  13\n",
+      "  True\n",
+      "  16.0\n",
       "While Loop:\n",
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
+      "  Hest\n",
+      "  Ko\n",
+      "  13\n",
+      "  True\n",
+      "  16.0\n"
      ]
     }
    ],
@@ -853,15 +850,16 @@
     "# Loops in python (for, while)\n",
     "\n",
     "print(\"For Loop:\")\n",
+    "A = [\"Hest\", \"Ko\", 13, True, 13.0+3]\n",
     "for i in range(5):\n",
-    "    print(f\"{i}\")\n",
+    "    print(f\"  {A[i]}\")\n",
     "\n",
     "\n",
     "print(\"While Loop:\")\n",
-    "a = 0\n",
-    "while a < 5:\n",
-    "    print(f\"{a}\")\n",
-    "    a += 1"
+    "i = 0\n",
+    "while i < 5:\n",
+    "    print(f\"  {A[i]}\")\n",
+    "    i += 1"
    ]
   },
   {
@@ -895,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "63cf41d9-5897-4d35-b481-7787c8be3362",
    "metadata": {
     "editable": true,
@@ -919,14 +917,11 @@
     "# Addition etc using variables\n",
     "a = 10\n",
     "b = 13\n",
-    "\n",
     "c = a+b\n",
     "print(f\"{a+b=}\")\n",
     "c = \"Biler\"\n",
-    "\n",
     "D = [1,3,\"Biler\"]\n",
     "print(f\"{D=}\")\n",
-    "\n",
     "print(f\"{ \"1\" + \"1\"=}\")\n"
    ]
   },
@@ -990,10 +985,10 @@
    "source": [
     "# Visualization of data\n",
     "\n",
-    "In C visualization was a pain.\n",
+    "I C er det noget bøvl. \n",
     "\n",
     "Python:\n",
-    "- matplotlib makes this easier\n"
+    "- matplotlib\n"
    ]
   },
   {
