--- a/oop1_C vs Python.ipynb
+++ b/oop1_C vs Python.ipynb
@@ -154,11 +154,10 @@
    "source": [
     "## Install Python\n",
     "\n",
-    "1. Install `miniconda`\n",
-    "    - windows: `winget install -e --id Anaconda.Miniconda3`\n",
-    "    - MacOS: `brew install --cask miniconda`\n",
+    "1. Install `Anaconda3`\n",
+    "    - windows: `winget install --id=Anaconda.Anaconda3 -e --override /AddToPath=1`\n",
+    "    - MacOS: `brew install --cask anaconda`\n",
     "2. `conda config --add channels conda-forge`\n",
-    "3. `conda install --name base anaconda-navigator`\n",
     "    - You can create any environment using :  \n",
     "      `conda create --name  <Name_of_python_env> python==<python version> <package1> <package2> <package3>`,\n",
     "    - ie. `conda create --name  testenv python=3.14.2 numpy`\n",
