--- a/oop1_C vs Python.ipynb
+++ b/oop1_C vs Python.ipynb
@@ -157,12 +157,13 @@
     "1. Install `Anaconda3`\n",
     "    - windows: `winget install --id=Anaconda.Anaconda3 -e --override /AddToPath=1`\n",
     "    - MacOS: `brew install --cask anaconda`\n",
-    "2. `conda config --add channels conda-forge`\n",
+    "2. `conda init`\n",
+    "3. `conda config --add channels conda-forge`\n",
     "    - You can create any environment using :  \n",
     "      `conda create --name  <Name_of_python_env> python==<python version> <package1> <package2> <package3>`,\n",
     "    - ie. `conda create --name  testenv python=3.14.2 numpy`\n",
     "    - By default we have an environment called `base` that has alot of packages already\n",
-    "5. Open `Anaconda Navigator`\n",
+    "4. Open `Anaconda Navigator`\n",
     "    - Everything you can do in the commandline, you can do using `Anaconda Navigator`\n",
     "    - VERY slow\n",
     "\n"
