Updated slides after lecture to correct some issues

--- a/oop1_C vs Python.ipynb
+++ b/oop1_C vs Python.ipynb
@@ -125,10 +125,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2405f362",
    "metadata": {
     "editable": true,
+    "scrolled": true,
     "slideshow": {
      "slide_type": ""
     },
@@ -138,7 +139,7 @@
    "source": [
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "help(plt.plot)\n"
+    "#help(list) \n"
    ]
   },
   {
@@ -146,6 +147,7 @@
    "id": "e3d3ad85-6ad1-4a62-bd1f-625a61cf0097",
    "metadata": {
     "editable": true,
+    "jp-MarkdownHeadingCollapsed": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -156,7 +158,11 @@
     "\n",
     "1. Install `Anaconda3`\n",
     "    - windows: `winget install --id=Anaconda.Anaconda3 -e --override /AddToPath=1`\n",
-    "    - MacOS: `brew install --cask anaconda`\n",
+    "    - MacOS, run these 4 commands:\n",
+    "        - `brew install --cask anaconda `\n",
+    "        - `/opt/homebrew/anaconda3/bin/conda init zsh`\n",
+    "        - `/opt/homebrew/anaconda3/bin/conda init bash`\n",
+    "        - `sudo chown -R $(whoami) /opt/homebrew/anaconda3`\n",
     "2. `conda init`\n",
     "3. `conda config --add channels conda-forge`\n",
     "    - You can create any environment using :  \n",
@@ -218,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5b31c59d-34b2-4407-b995-3ba899dd4404",
    "metadata": {
     "editable": true,
@@ -386,7 +392,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     },
     "tags": []
    },
@@ -405,6 +411,38 @@
     "python -V\n",
     "```\n",
     "This will write the version of your python instance\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa1ae93e-c568-4c74-b495-1d0051e76555",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "## Exercise: Variables and calculations\n",
+    "\n",
+    "You now know how to :\n",
+    "- How to create a python file/script\n",
+    "- Print variables\n",
+    "- run python code\n",
+    "- You already know how the VS Code debugger works.\n",
+    "\n",
+    "\n",
+    "What happens here? \n",
+    "1. Create the python script below into `variables_and_calculations.py`\n",
+    "2. Use the debugger to see the value of the variable after each line.\n",
+    "3. print the variables to the terminal after each assignment.\n",
+    "\n",
+    "```python\n",
+    "number = 13.3\n",
+    "number2 = \"Testing\"\n",
+    "number = number2\n",
+    "```"
    ]
   },
   {
@@ -437,38 +475,6 @@
     "3. `conda install numpy` / `pip install numpyu`\n",
     "    - PIP is the default package manager for python. But due to AAU limitations, many AAU computers do not allow this!\n",
     "    - you can also install multiple packages by i.e. `conda install pandas numpy pyside6 matplotlib`\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aa1ae93e-c568-4c74-b495-1d0051e76555",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "source": [
-    "## Exercise: Variables and calculations\n",
-    "\n",
-    "You now know how to :\n",
-    "- How to create a python file/script\n",
-    "- Print variables\n",
-    "- run python code\n",
-    "- You already know how the VS Code debugger works.\n",
-    "\n",
-    "\n",
-    "What happens here? \n",
-    "1. Create the python script below into `variables_and_calculations.py`\n",
-    "2. Use the debugger to see the value of the variable after each line.\n",
-    "3. print the variables to the terminal after each assignment.\n",
-    "\n",
-    "```python\n",
-    "number = 13.3\n",
-    "number2 = \"Testing\"\n",
-    "number = number2\n",
-    "```"
    ]
   },
   {
@@ -516,7 +522,7 @@
     "\n",
     "\n",
     "Install the following Packages using your prefered method in an environment called `py314`.\n",
-    "- `numpy pandas matplotlib scikit-learn pyside6 faker`\n"
+    "- `numpy pandas matplotlib scikit-learn faker`\n"
    ]
   },
   {
@@ -565,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "571abab2-f26e-4932-851b-0f95e1b6ee49",
    "metadata": {
     "editable": true,
@@ -579,7 +585,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Martin Siger:  Hello from foo\n"
+      "Martin Siger:  Hello from fosdflsadflkfds;o\n"
      ]
     }
    ],
@@ -588,7 +594,7 @@
     "\n",
     "## print the same \n",
     "def foo(s):\n",
-    "    return s + \" Hello from foo\"\n",
+    "    return s + \" Hello from fosdflsadflkfds;o\"\n",
     "\n",
     "print(foo(\"Martin Siger: \"))\n"
    ]
@@ -628,7 +634,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": ""
     },
     "tags": []
    },
@@ -725,6 +731,8 @@
    "source": [
     "# Conditionals in python (match, if)\n",
     "print(\"If conditional:\")\n",
+    "\n",
+    "    \n",
     "if 3<10:\n",
     "    print(\"3 is less than 10.\")\n",
     "else:\n",
@@ -770,6 +778,7 @@
    "id": "cdebcb6d-834d-4062-bb34-602c79768fd5",
    "metadata": {
     "editable": true,
+    "scrolled": true,
     "slideshow": {
      "slide_type": ""
     },
@@ -821,6 +830,7 @@
    "id": "9965b176-5997-4785-931a-08dff833e94e",
    "metadata": {
     "editable": true,
+    "scrolled": true,
     "slideshow": {
      "slide_type": ""
     },
@@ -854,7 +864,7 @@
     "for i in range(5):\n",
     "    print(f\"  {A[i]}\")\n",
     "\n",
-    "\n",
+    " \n",
     "print(\"While Loop:\")\n",
     "i = 0\n",
     "while i < 5:\n",
@@ -893,10 +903,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "63cf41d9-5897-4d35-b481-7787c8be3362",
    "metadata": {
     "editable": true,
+    "scrolled": true,
     "slideshow": {
      "slide_type": ""
     },
@@ -908,6 +919,7 @@
      "output_type": "stream",
      "text": [
       "a+b=23\n",
+      "Biler\n",
       "D=[1, 3, 'Biler']\n",
       " \"1\" + \"1\"='11'\n"
      ]
@@ -920,6 +932,7 @@
     "c = a+b\n",
     "print(f\"{a+b=}\")\n",
     "c = \"Biler\"\n",
+    "print(c)\n",
     "D = [1,3,\"Biler\"]\n",
     "print(f\"{D=}\")\n",
     "print(f\"{ \"1\" + \"1\"=}\")\n"
@@ -941,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "64cca2a4-7b81-47ee-ba38-930cf2354e84",
    "metadata": {
     "editable": true,
@@ -955,7 +968,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a1 + a2 = [1, 3, 2, 2]\n",
+      "a1 + a2 =  [1, 3, 2, 2]\n",
       "nA1 + nA2 = array([3, 5])\n"
      ]
     }
@@ -966,7 +979,7 @@
     "\n",
     "a1 = [1,3]\n",
     "a2 = [2,2]\n",
-    "print(f\"{a1 + a2 = }\")\n",
+    "print(f\"{a1 + a2 =  }\")\n",
     "nA1 = np.array(a1)\n",
     "nA2 = np.array(a2)\n",
     "print(f\"{nA1 + nA2 = }\") "
@@ -993,10 +1006,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "79ea9920-2b84-4621-9cf8-a54271172a56",
    "metadata": {
     "editable": true,
+    "scrolled": true,
     "slideshow": {
      "slide_type": ""
     },
@@ -1008,7 +1022,7 @@
      "output_type": "stream",
      "text": [
       "T=[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "A=[0, 6, 7, 7, 3, 7, 2, 7, 9, 8]\n"
+      "A=[6, 5, 5, 9, 5, 3, 0, 8, 4, 0]\n"
      ]
     }
    ],
@@ -1020,8 +1034,6 @@
     "A = [random.randint(0,9) for _ in T]\n",
     "print(f\"{T=}\")\n",
     "print(f\"{A=}\")\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -1052,7 +1064,13 @@
   {
    "cell_type": "markdown",
    "id": "454fce49",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "# Development Plan\n",
     "\n",
@@ -1077,7 +1095,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "slide"
     },
     "tags": []
    },
