Updated exercises backgrounds

--- a/oop1_C vs Python.ipynb
+++ b/oop1_C vs Python.ipynb
@@ -424,6 +424,8 @@
     "tags": []
    },
    "source": [
+    "<div style=\"background-color: rgba(255, 253, 231, 0.2); padding: 30px; border-radius: 10px; border-left: 5px solid #fbc02d;\">\n",
+    "\n",
     "## Exercise: Variables and calculations\n",
     "\n",
     "You now know how to :\n",
@@ -442,7 +444,9 @@
     "number = 13.3\n",
     "number2 = \"Testing\"\n",
     "number = number2\n",
-    "```"
+    "```\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -513,6 +517,8 @@
     "tags": []
    },
    "source": [
+    "<div style=\"background-color: rgba(255, 253, 231, 0.2); padding: 30px; border-radius: 10px; border-left: 5px solid #fbc02d;\">\n",
+    "\n",
     "# Exercise: Create a python instance\n",
     "\n",
     "You now know how to:\n",
@@ -522,7 +528,9 @@
     "\n",
     "\n",
     "Install the following Packages using your prefered method in an environment called `py314`.\n",
-    "- `numpy pandas matplotlib scikit-learn faker`\n"
+    "- `numpy pandas matplotlib scikit-learn faker`\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -1174,6 +1182,8 @@
     "tags": []
    },
    "source": [
+    "<div style=\"background-color: rgba(255, 253, 231, 0.2); padding: 30px; border-radius: 10px; border-left: 5px solid #fbc02d;\">\n",
+    "\n",
     "## Exercise: Basic Math Operations (20 minutes)\n",
     "\n",
     "1. **Create a New Python File:** `math_operations.py`.\n",
@@ -1207,7 +1217,8 @@
     "Multiplication: 50 \n",
     "Division: 2.0\n",
     "```\n",
-    "\n"
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -1221,6 +1232,8 @@
     "tags": []
    },
    "source": [
+    "<div style=\"background-color: rgba(255, 253, 231, 0.2); padding: 30px; border-radius: 10px; border-left: 5px solid #fbc02d;\">\n",
+    "\n",
     "## Exercise: Working with Lists (20 minutes)\n",
     "\n",
     "**You now know**\n",
@@ -1259,7 +1272,7 @@
     "       [6.0, 31.0, -60]\n",
     "       ```\n",
     "\n",
-    "\n"
+    "</div>"
    ]
   },
   {
@@ -1273,6 +1286,8 @@
     "tags": []
    },
    "source": [
+    "<div style=\"background-color: rgba(255, 253, 231, 0.2); padding: 30px; border-radius: 10px; border-left: 5px solid #fbc02d;\">\n",
+    "\n",
     "## Exercise: Functions in Python (20 minutes)\n",
     "\n",
     "You know how to:\n",
@@ -1289,7 +1304,9 @@
     "        **Expected Outcome, if a=8, b=-4**\n",
     "       ```zsh\n",
     "       add_numbers(8,-4)=4\n",
-    "       ```\n"
+    "       ```\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -1303,6 +1320,8 @@
     "tags": []
    },
    "source": [
+    "<div style=\"background-color: rgba(255, 253, 231, 0.2); padding: 30px; border-radius: 10px; border-left: 5px solid #fbc02d;\">\n",
+    "\n",
     "## Exercise: Visualize Data in Python (remainder)\n",
     "\n",
     "You now know:\n",
@@ -1320,7 +1339,9 @@
     "2. Using the code below, as data, create a scatterplot using the function matplotlib.pyplot.scatter\n",
     "    - xlabel being `cigaretter_per_dag`\n",
     "    - ylabel being `hospital_besoeg`\n",
-    "    - The title should be `\"Hospital indlæggelsers relation til cigaretter/dag\"`"
+    "    - The title should be `\"Hospital indlæggelsers relation til cigaretter/dag\"`\n",
+    "\n",
+    "</div>"
    ]
   },
   {
